--- a/src/app/components/schedule-view/schedule-view.component.html
+++ b/src/app/components/schedule-view/schedule-view.component.html
@@ -6,7 +6,7 @@
     <form class="form" (ngSubmit)="onSubmit()">
       <div class="row">
         <div class="col-75">
-          <input type="text" id="clientId" name="clientId" value="{{ clientId }}" disabled, [(ngModel)]="clientId" />
+          <input type="text" id="clientId" name="clientId" value="{{ clientId }}" [(ngModel)]="clientId" />
         </div>
       </div>
       <div class="row">
